// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic RadioGroup 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c9 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 100%;
  height: 1em;
  position: relative;
  width: 1em;
}

.c6 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c6[disabled] + .c8 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c6:checked:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:not([disabled]):checked + .c8 {
  border-color: #7467c0;
}

.c6:checked + .c8::before {
  background: #7467c0;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c6[disabled]:checked + .c8::before {
  background: #9a9a9a;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c3:not(:last-child) {
  margin-bottom: 0.5rem;
}

abbr.c10 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c10 {
  font-style: italic;
}

kbd.c10 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c10 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c10 {
  font-weight: bold;
}

sub.c10,
sup.c10 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c10,
u.c10 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c10,
cite.c10,
var.c10,
em.c10 {
  font-style: italic;
}

kbd.c10,
pre.c10,
samp.c10 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c10 .c12 {
  top: 0.1em;
}

<div
  class="c0 c1"
>
  <div
    aria-describedby="label"
    aria-invalid="false"
    class="c2 c1"
    role="group"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Sunny"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"sunny\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Sunny
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Windy"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"windy\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Windy
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Overcast"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"overcast\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Overcast
      </span>
    </label>
  </div>
</div>
`;

exports[`renders correctly for a disabled RadioGroup 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c9 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 100%;
  height: 1em;
  position: relative;
  width: 1em;
}

.c6 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c6[disabled] + .c8 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c6:checked:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:not([disabled]):checked + .c8 {
  border-color: #7467c0;
}

.c6:checked + .c8::before {
  background: #7467c0;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c6[disabled]:checked + .c8::before {
  background: #9a9a9a;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c3:not(:last-child) {
  margin-bottom: 0.5rem;
}

abbr.c10 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c10 {
  font-style: italic;
}

kbd.c10 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c10 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c10 {
  font-weight: bold;
}

sub.c10,
sup.c10 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c10,
u.c10 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c10,
cite.c10,
var.c10,
em.c10 {
  font-style: italic;
}

kbd.c10,
pre.c10,
samp.c10 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c10 .c12 {
  top: 0.1em;
}

<div
  class="c0 c1"
>
  <div
    aria-describedby="label"
    aria-invalid="false"
    class="c2 c1"
    role="group"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Sunny"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        disabled=""
        name="weather"
        type="radio"
        value="\\"sunny\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Sunny
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Windy"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        disabled=""
        name="weather"
        type="radio"
        value="\\"windy\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Windy
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Overcast"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        disabled=""
        name="weather"
        type="radio"
        value="\\"overcast\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Overcast
      </span>
    </label>
  </div>
</div>
`;

exports[`renders correctly for a disabled RadioGroup option 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c9 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 100%;
  height: 1em;
  position: relative;
  width: 1em;
}

.c6 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c6[disabled] + .c8 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c6:checked:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:not([disabled]):checked + .c8 {
  border-color: #7467c0;
}

.c6:checked + .c8::before {
  background: #7467c0;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c6[disabled]:checked + .c8::before {
  background: #9a9a9a;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c3:not(:last-child) {
  margin-bottom: 0.5rem;
}

abbr.c10 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c10 {
  font-style: italic;
}

kbd.c10 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c10 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c10 {
  font-weight: bold;
}

sub.c10,
sup.c10 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c10,
u.c10 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c10,
cite.c10,
var.c10,
em.c10 {
  font-style: italic;
}

kbd.c10,
pre.c10,
samp.c10 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c10 .c12 {
  top: 0.1em;
}

<div
  class="c0 c1"
>
  <div
    aria-describedby="label"
    aria-invalid="false"
    class="c2 c1"
    role="group"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Sunny"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        disabled=""
        name="weather"
        type="radio"
        value="\\"sunny\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Sunny
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Windy"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"windy\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Windy
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Overcast"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"overcast\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Overcast
      </span>
    </label>
  </div>
</div>
`;

exports[`states renders correctly for an RadioGroup with state danger 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c9 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 100%;
  height: 1em;
  position: relative;
  width: 1em;
}

.c9 {
  border-color: #e24c67;
  box-shadow: #e24c67 0px 0px 0px 1px !important;
}

.c12[disabled] + .c8 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c12:checked:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c12:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c12:not([disabled]):checked + .c8 {
  border-color: #7467c0;
}

.c12:checked + .c8::before {
  background: #7467c0;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c12[disabled]:checked + .c8::before {
  background: #9a9a9a;
}

.c6 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c6[disabled] + .c8 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c6:checked:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:not([disabled]):checked + .c8 {
  border-color: #7467c0;
}

.c6:checked + .c8 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:checked + .c8::before {
  background: #7467c0;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c6[disabled]:checked + .c8::before {
  background: #9a9a9a;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c3:not(:last-child) {
  margin-bottom: 0.5rem;
}

abbr.c10 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c10 {
  font-style: italic;
}

kbd.c10 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c10 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c10 {
  font-weight: bold;
}

sub.c10,
sup.c10 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c10,
u.c10 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c10,
cite.c10,
var.c10,
em.c10 {
  font-style: italic;
}

kbd.c10,
pre.c10,
samp.c10 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c10 .c13 {
  top: 0.1em;
}

<div
  class="c0 c1"
>
  <div
    aria-describedby="label"
    aria-invalid="true"
    class="c2 c1"
    role="group"
  >
    <label
      aria-describedby="label"
      aria-invalid="true"
      aria-label="Sunny"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"sunny\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Sunny
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="true"
      aria-label="Windy"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"windy\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Windy
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="true"
      aria-label="Overcast"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"overcast\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Overcast
      </span>
    </label>
  </div>
</div>
`;

exports[`states renders correctly for an RadioGroup with state primary 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c9 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 100%;
  height: 1em;
  position: relative;
  width: 1em;
}

.c9 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c12[disabled] + .c8 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c12:checked:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c12:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c12:not([disabled]):checked + .c8 {
  border-color: #7467c0;
}

.c12:checked + .c8::before {
  background: #7467c0;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c12[disabled]:checked + .c8::before {
  background: #9a9a9a;
}

.c6 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c6[disabled] + .c8 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c6:checked:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:not([disabled]):checked + .c8 {
  border-color: #7467c0;
}

.c6:checked + .c8 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:checked + .c8::before {
  background: #7467c0;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c6[disabled]:checked + .c8::before {
  background: #9a9a9a;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c3:not(:last-child) {
  margin-bottom: 0.5rem;
}

abbr.c10 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c10 {
  font-style: italic;
}

kbd.c10 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c10 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c10 {
  font-weight: bold;
}

sub.c10,
sup.c10 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c10,
u.c10 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c10,
cite.c10,
var.c10,
em.c10 {
  font-style: italic;
}

kbd.c10,
pre.c10,
samp.c10 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c10 .c13 {
  top: 0.1em;
}

<div
  class="c0 c1"
>
  <div
    aria-describedby="label"
    aria-invalid="false"
    class="c2 c1"
    role="group"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Sunny"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"sunny\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Sunny
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Windy"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"windy\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Windy
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Overcast"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"overcast\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Overcast
      </span>
    </label>
  </div>
</div>
`;

exports[`states renders correctly for an RadioGroup with state success 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c9 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 100%;
  height: 1em;
  position: relative;
  width: 1em;
}

.c9 {
  border-color: #4ca26c;
  box-shadow: #4ca26c 0px 0px 0px 1px !important;
}

.c12[disabled] + .c8 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c12:checked:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c12:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c12:not([disabled]):checked + .c8 {
  border-color: #7467c0;
}

.c12:checked + .c8::before {
  background: #7467c0;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c12[disabled]:checked + .c8::before {
  background: #9a9a9a;
}

.c6 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c6[disabled] + .c8 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c6:checked:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:not([disabled]):checked + .c8 {
  border-color: #7467c0;
}

.c6:checked + .c8 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:checked + .c8::before {
  background: #7467c0;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c6[disabled]:checked + .c8::before {
  background: #9a9a9a;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c3:not(:last-child) {
  margin-bottom: 0.5rem;
}

abbr.c10 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c10 {
  font-style: italic;
}

kbd.c10 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c10 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c10 {
  font-weight: bold;
}

sub.c10,
sup.c10 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c10,
u.c10 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c10,
cite.c10,
var.c10,
em.c10 {
  font-style: italic;
}

kbd.c10,
pre.c10,
samp.c10 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c10 .c13 {
  top: 0.1em;
}

<div
  class="c0 c1"
>
  <div
    aria-describedby="label"
    aria-invalid="false"
    class="c2 c1"
    role="group"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Sunny"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"sunny\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Sunny
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Windy"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"windy\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Windy
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Overcast"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"overcast\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Overcast
      </span>
    </label>
  </div>
</div>
`;

exports[`states renders correctly for an RadioGroup with state warning 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c9 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 100%;
  height: 1em;
  position: relative;
  width: 1em;
}

.c9 {
  border-color: #ffc94c;
  box-shadow: #ffc94c 0px 0px 0px 1px !important;
}

.c12[disabled] + .c8 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c12:checked:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c12:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c12:not([disabled]):checked + .c8 {
  border-color: #7467c0;
}

.c12:checked + .c8::before {
  background: #7467c0;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c12[disabled]:checked + .c8::before {
  background: #9a9a9a;
}

.c6 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c6[disabled] + .c8 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c6:checked:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:focus + .c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:not([disabled]):checked + .c8 {
  border-color: #7467c0;
}

.c6:checked + .c8 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c6:checked + .c8::before {
  background: #7467c0;
  border-radius: 50%;
  content: '';
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

.c6[disabled]:checked + .c8::before {
  background: #9a9a9a;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c3:not(:last-child) {
  margin-bottom: 0.5rem;
}

abbr.c10 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c10 {
  font-style: italic;
}

kbd.c10 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c10 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c10 {
  font-weight: bold;
}

sub.c10,
sup.c10 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c10,
u.c10 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c10,
cite.c10,
var.c10,
em.c10 {
  font-style: italic;
}

kbd.c10,
pre.c10,
samp.c10 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c10 .c13 {
  top: 0.1em;
}

<div
  class="c0 c1"
>
  <div
    aria-describedby="label"
    aria-invalid="false"
    class="c2 c1"
    role="group"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Sunny"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"sunny\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Sunny
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Windy"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"windy\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Windy
      </span>
    </label>
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Overcast"
      aria-required="false"
      class="c3 c4 c5 c1"
    >
      <input
        class="c6 c7"
        name="weather"
        type="radio"
        value="\\"overcast\\""
      />
      <div
        class="c8 c9 c1"
      />
      <span
        class="c10 c11"
        id="label"
      >
        Overcast
      </span>
    </label>
  </div>
</div>
`;
